updated login and dashboards
